# our_fractal_core

./: .env  .gitignore  Cargo.toml  README.md  test.txt  test_coverage.sh
.circleci/: config.yml
files/: .gitignore  README.md
files/mfd_test01/table_test/org/: dbdf.mfd
files/mfd_test01/table_test/org/data/: data_test.mfd
src/: lib.rs  main.rs  manager.rs
src/manager/: data.rs  io_for_db.rs
src/manager/data/: definition.rs
src/manager/data/definition/: child.rs  data_type.rs  multi_type.rs
src/manager/io_for_db/: path_manager.rs  reader.rs  writer.rs
tests/: data_test.rs  definition_test.rs  manager_test.rs  story_test.rs
